force-app/main/default/objects/AsyncQueue__c/AsyncQueue__c.object-meta.xml
<CustomObject>
    <label>AsyncQueue</label>
    <nameField>
        <displayFormat>BatchQueue - {0000}</displayFormat>
        <label>BatchQueue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncQueues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>