force-app/main/default/objects/AsyncQueue__c/fields/Error_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Error_Collection_Status__c</fullName>
    <label>Error Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Collected</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>