force-app/main/default/objects/AsyncQueue__c/fields/Is_Retry__c.field-meta.xml
<CustomField>
    <fullName>Is_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retry</label>
    <type>Checkbox</type>
</CustomField>