force-app/main/default/objects/AsyncQueue__c/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <label>object</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>