force-app/main/default/objects/AsyncQueue__c/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <label>priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>