force-app/main/default/objects/AsyncQueue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Size__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Error_Collection_Status__c</columns>
    <columns>Is_Retry__c</columns>
    <columns>Job_Id__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Note__c</columns>
    <columns>object__c</columns>
    <columns>priority__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>